--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,8 +15,8 @@ jobs:
       - name: Instalar dependencias
         run: npm install
 
-      - name: Agregar node_modules/.bin al PATH
-        run: echo "$PWD/node_modules/.bin" >> $GITHUB_PATH
-
+      - name: Otorgar permisos de ejecución a Jest
+        run: chmod +x ./node_modules/.bin/jest
+        
       - name: Ejecutar pruebas
         run: npm test
